Minor update and bugfix of resetting emails

--- a/src/main/webapp/reset_password.xhtml
+++ b/src/main/webapp/reset_password.xhtml
@@ -11,11 +11,11 @@
 			<div id="reset-password">
 				<h:form id="reset-password">
 					<span style="display: block;">Beställ nytt lösenord</span>
-					<h:inputText id="in" value="#{resetPasswordFacade.email}"
+					<h:inputText id="password-input" value="#{resetPasswordFacade.email}"
 						style="#{resetPasswordFacade.valid ? 'border: 0 px white': 'border: 2px solid red'};"
 						p:placeholder="E-post">
-						<f:ajax event="keyup" render="in"
-							listener="#{resetPasswordFacade.emailChanged}" renderer="@form" />
+						<f:ajax event="keyup" render="password-input"
+							listener="#{resetPasswordFacade.emailChanged}" renderer="@none" />
 					</h:inputText>
 					<h:commandButton value="Nytt lösenord" p:class="button"
 						action="#{resetPasswordFacade.resetPassword()}" />
