Updating resetPassword, trying another ajax handling

--- a/src/main/webapp/reset_password.xhtml
+++ b/src/main/webapp/reset_password.xhtml
@@ -14,12 +14,13 @@
 					<h:inputText id="password-input" value="#{resetPasswordFacade.email}"
 						style="#{resetPasswordFacade.valid ? 'border: 0 px white': 'border: 2px solid red'};"
 						p:placeholder="E-post">
-						<f:ajax event="keyup" render="password-input"
-							listener="#{resetPasswordFacade.emailChanged}" renderer="@none" />
+						<f:ajax event="keyup" render="output"
+							listener="#{resetPasswordFacade.emailChanged}" />
 					</h:inputText>
 					<h:commandButton value="Nytt lösenord" p:class="button"
 						action="#{resetPasswordFacade.resetPassword()}" />
 					<br />
+					<h:outputText id="output" value="#{resetPasswordFacade.valid}"/>
 					<h:messages errorStyle="color:red;" />
 				</h:form>
 			</div>
