--- a/src/main/webapp/reset_password.xhtml
+++ b/src/main/webapp/reset_password.xhtml
@@ -11,16 +11,18 @@
 			<div id="reset-password">
 				<h:form id="reset-password">
 					<span style="display: block;">Beställ nytt lösenord</span>
-					<h:inputText id="password-input" value="#{resetPasswordFacade.email}"
-						style="#{resetPasswordFacade.valid ? 'border: 0 px white': 'border: 2px solid red'};"
-						p:placeholder="E-post">
-						<f:ajax event="keyup" render="output"
+					<h:inputText id="password-input"
+						value="#{resetPasswordFacade.email}" p:placeholder="E-post">
+						<f:ajax event="keyup" render="valid-email-info"
 							listener="#{resetPasswordFacade.emailChanged}" />
 					</h:inputText>
 					<h:commandButton value="Nytt lösenord" p:class="button"
 						action="#{resetPasswordFacade.resetPassword()}" />
 					<br />
-					<h:outputText id="output" value="#{resetPasswordFacade.valid}"/>
+
+					<h:outputText id="valid-email-info"
+						value="#{resetPasswordFacade.valid ? '' : 'Ogiltig e-post'}"
+						style="#{resetPasswordFacade.valid ? 'color: black': 'color : red'}" />
 					<h:messages errorStyle="color:red;" />
 				</h:form>
 			</div>
