Added NotNullOrEmpty and Email Validator. Also first draft of signUp page

--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -21,7 +21,7 @@
 					</h:panelGrid>
 				</h:form>
 				<span style="display: block"><a href="reset_password.xhtml"
-					id="forgot-password">Glömt lösenord?</a></span> <a href="#"
+					id="forgot-password">Glömt lösenord?</a></span> <a href="signup.xhtml"
 					id="create-account">Skapa konto</a>
 
 				<h:messages errorStyle="color:red;" />
