Moved add user facades to new package

--- a/src/main/webapp/reset_password.xhtml
+++ b/src/main/webapp/reset_password.xhtml
@@ -21,7 +21,7 @@
 					<br />
 
 					<h:outputText id="valid-email-info"
-						value="#{resetPasswordFacade.valid ? '' : 'Ogiltig e-post'}"
+						value="#{resetPasswordFacade.valid ? '' : 'Okänd e-post'}"
 						style="#{resetPasswordFacade.valid ? 'color: black': 'color : red'}" />
 					<h:messages errorStyle="color:red;" />
 				</h:form>
