--- a/src/main/webapp/subject/show_subjects_in_category.xhtml
+++ b/src/main/webapp/subject/show_subjects_in_category.xhtml
@@ -1,12 +1,16 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:pf="http://jsf.playerfinder.net/components"
 	xmlns:c="http://java.sun.com/jsp/jstl/core">
 
+	<ui:param name="user" value="#{loggedInUserFacade.getLoggedInUser()}" />
+	<ui:param name="authenticatedUser"
+		value="#{loggedInUserFacade.isUserLoggedIn()}" />
+
 	<c:choose>
-		<c:when test="#{loggedInUserFacade.isUserLoggedIn()}">
+		<c:when test="#{authenticatedUser}">
 			<a
 				href="
 	${facesContext.externalContext.requestContextPath}/subject/new_subject_description.xhtml?category=#{category}"
@@ -33,10 +37,15 @@
 				</pf:rating>
 			</div>
 			<h:outputText value="#{subject.description}" escape="false" />
-			<a
-				href="
+
+			<ui:fragment rendered="#{userServiceUtil.canModify(user, subject)}">
+				<a
+					href="
 	${facesContext.externalContext.requestContextPath}/subject/update_subject.xhtml?subjectId=#{subject.id}&amp;category=#{subject.category}"
-				class="button">Ändra</a> <a
+					class="button">Ändra</a>
+			</ui:fragment>
+
+			<a
 				href="
 	${facesContext.externalContext.requestContextPath}/subject/show_subject.xhtml?subjectId=#{subject.id}&amp;category=#{subject.category}"
 				class="button">Detaljer</a>
