--- a/src/main/webapp/subject/new_subject_description.xhtml
+++ b/src/main/webapp/subject/new_subject_description.xhtml
@@ -9,7 +9,7 @@
 	<f:view encoding="UTF-8">
 		<ui:composition template="/hhcib_template.xhtml">
 			<ui:define name="content">
-				Lägg till en ny How-To beskrivning
+				<h2>Lägg till ny beskrivning</h2>
 				<f:metadata>
 					<f:viewParam id="category" name="category"
 						value="#{newSubjectFacade.category}" required="true" />
