updated menu items

--- a/src/main/webapp/menu_template.xhtml
+++ b/src/main/webapp/menu_template.xhtml
@@ -17,7 +17,7 @@
 									2</span></a></li>
 					</ul>
 				</li>
-				<li class='has-sub'><a href='#'><span>Mat</span></a>
+				<li class='has-sub'><a href='#'><span>Matlagning</span></a>
 					<ul>
 						<li><a
 							href="${facesContext.externalContext.requestContextPath}/categories/subjects_in_category.xhtml?category=FOOD"><span>underkategory
