Some refactorings and updated javadoc. Also improved PerformanceInterceptor

--- a/src/main/webapp/subject/show_subjects_in_category.xhtml
+++ b/src/main/webapp/subject/show_subjects_in_category.xhtml
@@ -35,7 +35,7 @@
 				<pf:rating totalStars="7" step="1" value="#{subject.rating}"
 					disabled="true">
 				</pf:rating>
-				<span id="voters">(#{subject.numberOfVoters} omdömen)</span>
+				<span id="voters">(#{subject.numberOfVoters} röster)</span>
 			</div>
 			<h:outputText value="#{subject.description}" escape="false" />
 
