Updated info on main page. Added Javadoc, removes some facade from ViewScope to requestScoped

--- a/src/main/webapp/hhcib_template.xhtml
+++ b/src/main/webapp/hhcib_template.xhtml
@@ -47,8 +47,7 @@ charset=UTF-8" />
 
 		<div id="header">
 			<ui:insert name="top">
-				<h3>Välkommen till HurSvårtKanDetVara.se - Sajten för alla
-					hemmafixare!</h3>
+				<h3 class="splash">Välkommen till HurSvårtKanDetVara.se</h3>
 			</ui:insert>
 		</div>
 
