--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -9,11 +9,8 @@
 			<h:outputScript library="javascript" name="slider.js" target="head" />
 			<h:outputScript library="javascript" name="websocket.js" target="head" />
 				
-Välkommen till HurSvårtKanDeVa.se - sajten för alla hemmafixare och proffs! Här kan du...
-		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut 
-		labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut 
-		aliquip ex ea commodo consequat.
-		
+Välkommen till HurSvårtKanDeVa.se - sajten där goda råd är gratis! Här kan du enkelt hitta råd och beskrivningar 
+på saker du alltid trott är svårta och krångliga. Du är även möjliget att rösta på de beskrivningar eller själv bidra med information.
 		<div id="subject-slider">
 				<ul>
 					<li class="current" id="current">Ut enim ad minim veniam, quis nostrud
