Added dependency on Arquillian Drone for web testing. Created pages (PageObjectPattern) also modified some jsf-namespaces since new NS (jcp.org) seems to be parsed incorrect (known bug) so switched back to java.sun.com

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -1,14 +1,15 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-	xmlns:h="http://xmlns.jcp.org/jsf/html">
+	xmlns:ui="http://java.sun.com/jsf/facelets"
+	xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:f="http://java.sun.com/jsf/core">
 
 <h:body>
-	<ui:composition template="/hhcib_template.xhtml">
+	<ui:composition template="hhcib_template.xhtml">
 
 		<ui:define name="content">
 			<h:outputScript library="javascript" name="slider.js" target="head" />
 			<h:outputScript library="javascript" name="websocket.js" target="head" />
-				
+				aaaaaaaa
 Välkommen till HurSvårtKanDeVa.se - sajten där goda råd är gratis! Här kan du enkelt hitta råd och beskrivningar 
 på saker du alltid trott är svårta och krångliga. Du är även möjliget att rösta på de beskrivningar eller själv bidra med information.
 		<div id="subject-slider">
