--- a/src/main/webapp/login/login.xhtml
+++ b/src/main/webapp/login/login.xhtml
@@ -1,8 +1,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:p="http://java.sun.com/jsf/passthrough"
-	xmlns:f="http://java.sun.com/jsf/core">
+	xmlns:p="http://xmlns.jcp.org/jsf/passthrough">
 
 <h:body>
 	<ui:composition template="/hhcib_template.xhtml">
