Added more styling of input fields and buttons

--- a/src/main/webapp/login/login.xhtml
+++ b/src/main/webapp/login/login.xhtml
@@ -10,7 +10,7 @@
 			<div id="login-form">
 				<span id="login-info-text">Ange ditt användarnamn och lösenord för
 					att logga in.</span>
-				<h:form id="login-form">
+				<h:form id="hhcib-form">
 					<h:panelGrid columns="1">
 						<h:inputText id="username" value="#{loginFacade.username}"
 							p:placeholder="användarnamn" p:class="rounded" p:size="30"/>
