--- a/src/main/webapp/login/reset_password.xhtml
+++ b/src/main/webapp/login/reset_password.xhtml
@@ -9,10 +9,11 @@
 
 		<ui:define name="content">
 			<div id="reset-password">
-				<h:form id="reset-password">
+				<h:form id="hhcib-form">
 					<span style="display: block;">Beställ nytt lösenord</span>
 					<h:inputText id="password-input"
-						value="#{resetPasswordFacade.email}" p:placeholder="E-post">
+						value="#{resetPasswordFacade.email}" p:placeholder="E-post"
+						p:class="rounded" p:size="30">
 						<f:ajax event="keyup" render="valid-email-info"
 							listener="#{resetPasswordFacade.emailChanged}" />
 					</h:inputText>
