Added feedback page

--- a/src/main/webapp/menu_template.xhtml
+++ b/src/main/webapp/menu_template.xhtml
@@ -38,7 +38,7 @@
 					</ul>
 				</li>
 				<li><a href="${facesContext.externalContext.requestContextPath}/secured/my_pages.xhtml"><span>Mina Sidor</span></a></li>
-				<li class='last'><a href='#'><span>Kontakta oss</span></a></li>
+				<li class='last'><a href="${facesContext.externalContext.requestContextPath}/feedback.xhtml"><span>Feedback</span></a></li>
 			</ul>
 		</div>
 
