Renamed less dir to sass

--- a/src/main/webapp/hhcib_template.xhtml
+++ b/src/main/webapp/hhcib_template.xhtml
@@ -15,9 +15,9 @@ charset=UTF-8" />
 		href="${facesContext.externalContext.requestContextPath}/resources/css/unoSlider.min.css"
 		type="text/css" media="screen" />
 	<link
-		href="${facesContext.externalContext.requestContextPath}/resources/css/less/hhcib.less"
-		rel="stylesheet/less" type="text/css" />
-	<script src="${facesContext.externalContext.requestContextPath}/resources/javascript/less-1.4.1.min.js"></script>
+		href="${facesContext.externalContext.requestContextPath}/resources/css/hhcib.css"
+		rel="stylesheet" type="text/css" />
+	
 	<link
 		href="${facesContext.externalContext.requestContextPath}/resources/css/hhcib_print.css"
 		rel="stylesheet" type="text/css" media="print" />
