Moved slider.js and websocket.js to template-file

--- a/src/main/webapp/hhcib_template.xhtml
+++ b/src/main/webapp/hhcib_template.xhtml
@@ -17,7 +17,7 @@ charset=UTF-8" />
 	<link
 		href="${facesContext.externalContext.requestContextPath}/resources/css/hhcib.css"
 		rel="stylesheet" type="text/css" />
-	
+
 	<link
 		href="${facesContext.externalContext.requestContextPath}/resources/css/hhcib_print.css"
 		rel="stylesheet" type="text/css" media="print" />
@@ -38,6 +38,14 @@ charset=UTF-8" />
 
 	<script type="text/javascript"
 		src="${facesContext.externalContext.requestContextPath}/resources/javascript/tinymce.js">
+	</script>
+
+	<script type="text/javascript"
+		src="${facesContext.externalContext.requestContextPath}/resources/javascript/slider.js">
+	</script>
+	
+	<script type="text/javascript"
+		src="${facesContext.externalContext.requestContextPath}/resources/javascript/websocket.js">
 	</script>
 
 </h:head>
