--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -17,41 +17,11 @@ på saker du alltid trott är svårta och krångliga. Du är även möjliget att
 					p:placeholder="Sök ämne, kategori, m.m" p:class="rounded"
 					p:size="40">
 					<f:ajax event="keyup" listener="#{searchFacade.search}"
-						render="result" />
+						render="result info" />
 				</h:inputText>
 
 				<div id="search-result">
-
-					<h:dataTable id="result" value="#{searchFacade.searchResult}"
-						var="subject" styleClass="search-result-table"
-						headerClass="search-result-header"
-						rowClasses="search-result-odd-row,search-result-even-row">
-						<h:column rendered="#{searchFacade.searchResult.size() gt 0}">
-							<f:facet name="header">Skapad av</f:facet>
-							<h:outputLink
-								value="#{facesContext.externalContext.requestContextPath}/subject/show_subject.xhtml?subjectId=#{subject.id}&amp;category=#{subject.category}"
-								class="link">#{subject.createdBy}</h:outputLink>
-
-						</h:column>
-						<h:column rendered="#{searchFacade.searchResult.size() gt 0}">
-							<f:facet name="header">Nyckelord</f:facet>
-    						<h:outputLink
-								value="#{facesContext.externalContext.requestContextPath}/subject/show_subject.xhtml?subjectId=#{subject.id}&amp;category=#{subject.category}"
-								class="link">#{subject.heading}</h:outputLink> 
-    					</h:column>
-
-						<h:column rendered="#{searchFacade.searchResult.size() gt 0}">
-							<f:facet name="header">Kategori</f:facet>
-    						#{subject.category}
-    					</h:column>
-						<h:column rendered="#{searchFacade.searchResult.size() gt 0}">
-							<f:facet name="header">Omdöme</f:facet>
-							<pf:rating totalStars="7" step="1" disabled="true"
-								value="#{subject.rating}">
-							</pf:rating>
-						</h:column>
-					</h:dataTable>
-
+					<ui:decorate template="/search/search_result_template.xhtml"/>
 				</div>
 			</h:form>
 
